fixes spacing on glyphicon icons

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -33,9 +33,9 @@ strong + small {
 }
 
 input[type=checkbox] {
-  margin-right: 1em;
+  margin-right: 1em !important;
 }
 
-div.pull-right a {
-  margin-left: 1em;
+.pull-right{
+  margin-right: 1em !important;
 }
